[Son]: test create process rabbit.